k8s/orders-service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
spec:
  selector:
    matchLabels:
      app: products-service
  template:
    metadata:
      labels:
        app: products-service
    spec:
      containers:
        - name: products-service
          image: andresgalvan/products-service:v1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 9000
            initialDelaySeconds: 5
            timeoutSeconds: 3
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: products-service
